result/namespaces/err_4.xml.err
./test/namespaces/err_4.xml:1: error: Failed to parse QName 'f:'
<f: xmlns:f="http://example.com/foo"/>
   ^
